# PodIA

./: .env.template  podia.py  pyproject.toml
PodIA/: example.py  main.py
PodIA/docs/: transcript_video.py
PodIA/utils/: env_loader.py
assets/docs/prompts/: personaje_Alfonso#1.txt  personaje_Patricia#2.txt  podcast_anfitrion_init.txt  podcast_personaje1_init.txt
assets/docs/transcript/: bItvhlRVQhM_The animation library you should probably be using.txt
assets/docs/transcript/pdf/: 6 Viaje a la luna autor Cyrano de Bergerac_transcripcion.txt  Nexus  una breve historia de las redes de informacion de la Edad de Piedra hasta la I.A._transcripcion.txt
assets/docs/transcript/video/: Little_Voice___Behind_the_Music___Apple_TV__transcript.txt  REFLEXIÓN DE VIDA_transcript.txt
assets/docs/transcript/web/: L7nuMgfeynw_Dude Perfect vs. Steph Curry.txt
assets/draw/: idea.excalidraw
audio/: video_processor.py
core/: script.py  summary.py  voice.py
core/characters/: anfitrion.py  participante1.py
docs/: pdf_processor.py  youtube_processor.py
tests/: conftest.py  test_pdf_processor.py  test_script.py  test_summary.py  test_url_processor.py  test_video_processor.py  test_voice.py  test_youtube_processor.py
ui/: podia_ui.py  theme.py
utils/: constants.py  download_video.py  env_loader.py  gen_podcast_name.py  url_processor.py
