[tool.poetry]
name = "PodIA"
version = "0.1.0"
description = "Una IA que puede hacer podcats"
authors = ["Yuzu <Yuzu_0204@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^5.6.0"
openai = "^1.54.4"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
